--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
 
         </section>
       </main>
+
+      
+      <footer>
+        <hr class="text-success w-50 mx-auto">
+       
+        <ul>
+          <li class= "fs list-unstyled text-center">Powered by Edusoft Consultants Ltd</li>
+          <li class= "fs list-unstyled text-center">Copyright © 2013 - 2014 Edusoft Consultants Ltd. All rights reserved.</li>
+        </ul>
+
+      </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
